# old-perf-ocl

./: .gitignore  README.md  build.cmd
src/: CMakeLists.txt  OpenCVDetectOpenCL.cmake  main.cpp  perf_arithm.cpp  perf_calib3d.cpp  perf_canny.cpp  perf_haar.cpp  perf_moments.cpp  perf_opticalflow.cpp  perf_precomp.hpp
